Overlap issue

--- a/QualiLogProject/style/styleW.css
+++ b/QualiLogProject/style/styleW.css
@@ -223,15 +223,17 @@ summary {
     height: 2px;
 }
 
-.versionEtRef {
+.versionEtRef{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 
-.versionEtRef p:nth-child(2) {
+.versionEtRef p:nth-child(2){
     font-weight: bold;
 }
+
+
 
 .form-control {
     display: block;
@@ -416,4 +418,33 @@ th {
 
 .NoUnderline:hover {
     text-decoration: none;
+}
+
+details[open] summary ~ * {
+    animation: sweep .5s ease-in-out;
+}
+details[close] summary ~ * {
+    animation: sweep .5s ease-in-out;
+}
+
+@keyframes sweep {
+    0%    {opacity: 0; margin-top: -20px}
+    100%  {opacity: 1; margin-top: 0px}
+}
+
+.reservationWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.sumReservations {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    height: 3px;
 }
